# d-_-n_NST_02

./: .env  .gitattributes  .gitignore  AI_RULES.md  PIPELINE_VISUALIZATION.md  PROJECT_STATE.md  README.md  du_an_NST_toan_bo.html  kaggle_train_instructions.md  main.py  pyproject.toml  train_dual_branch.py  train_karyotype.py
ai_training/training/: data_prep.py  trainer.py
code_refactored/: main.py
code_refactored/config/: settings.py
code_refactored/core/: image_utils.py  metrics.py  model_unet.py
code_refactored/docs/: colab_train_instructions.md
code_refactored/models/: swin_karyotype.py
code_refactored/pipeline/: step01_data_prep.py  step02_trainer.py  step03_inference.py  step04_evaluator.py
code_refactored/tests/: test_b3.py
code_refactored/utils/: extract_nb.py  make_grid.py  visualization.py
core/: __init__.py
core/metrics/: __init__.py
core/models/: __init__.py  losses.py  unet.py
data/: __init__.py  dataset.py  preprocessing.py
medical_pipeline/core/: __init__.py
medical_pipeline/karyogram/: builder.py
medical_pipeline/morphology/: __init__.py  alignment.py  geometric_cutter.py  segmentation.py
medical_pipeline/pairing/: hungarian_matcher.py
medical_pipeline/pipeline/: buoc1_tang_cuong_anh_giam_mo.py  buoc2_tach_tung_cum_nhiem_sac_the.py  buoc3_0_phan_loai_cum.py  buoc3_1_xu_ly_cham.py  buoc3_2_xu_ly_chong.py  buoc3_3_xu_ly_chong_cham.py  buoc3_main.py  (+3 more)
morphology/: __init__.py  inpainting.py
pipeline/: step01_data_prep.py  step02_trainer.py  step03_inference.py  step04_evaluator.py
utils/: __init__.py  image_io.py
(+5036 files in other folders)
